<resources>
    <string name="app_name">EcommerceS</string>
    <string name="welcome_to_ruby_market">nameShop</string>
    <string name="explore_us">explore_us</string>
    <string name="log_in">log_in</string>
    <string name="sign_up">sign_up</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="signUp">Sign Up</string>
    <string name="signup">Sign Up</string>
    <string name="nameRegister">Name</string>
    <string name="email_register">Email</string>
    <string name="passwordRegister">Password</string>
    <string name="sign_inR">Sign in</string>
    <string name="already_have_account_r">Already have account?</string>
    <string name="signupR">Signup</string>
</resources>